...
            android:layout_marginStart="@dimen/linearlayout_dialog_header_edit_title_margin_left"
            android:layout_marginTop="@dimen/linearlayout_dialog_header_edit_title_margin_top"
            android:layout_marginBottom="@dimen/linearlayout_dialog_header_edit_title_margin_bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_dialog_header_edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/label_dialog_header_edit_title" />

...
            android:layout_marginStart="@dimen/linearlayout_dialog_header_edit_name_margin_left"
            android:layout_marginEnd="@dimen/linearlayout_dialog_header_edit_name_margin_end"
            android:layout_marginTop="@dimen/linearlayout_dialog_header_edit_name_margin_top"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittext_dialog_header_edit_name"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textUri|textMultiLine|textNoSuggestions"
                android:scrollHorizontally="false"
...
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/linearlayout_dialog_header_edit_value_margin_left"
            android:layout_marginEnd="@dimen/linearlayout_dialog_header_edit_value_margin_end"
            android:layout_marginTop="@dimen/linearlayout_dialog_header_edit_value_margin_top">

            <EditText
                android:id="@+id/edittext_dialog_header_edit_value"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textUri|textMultiLine|textNoSuggestions"
                android:scrollHorizontally="false"
...
            android:layout_marginTop="@dimen/linearlayout_dialog_header_edit_basic_auth_margin_top"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_dialog_header_edit_basic_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonTint="@drawable/checkbox_selector"
                android:text="@string/label_dialog_header_edit_basic_auth"
                android:textColor="@color/textColor"
                android:checked="false" />
...
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_header_edit_ok"
                app:srcCompat="@drawable/icon_ok_selector" />

            <ImageView
                android:id="@+id/imageview_dialog_header_edit_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_header_edit_cancel"
...
