...
    <integer name="snmp_usm_user_cache_size">1000</integer>
    <integer name="dns_lookup_timeout">60</integer>
    <integer name="dns_max_parallel_lookups">10</integer>
    <string name="http_header_content_disposition">Content-Disposition</string>
    <string name="http_header_content_type">Content-Type</string>
    <string name="http_header_content_location">Location</string>
    <string name="http_header_authorization">Authorization</string>
    <string name="http_header_user_agent">User-Agent</string>
    <string name="http_header_accept">Accept</string>
    <string name="http_header_accept_value">text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8</string>
    <string name="http_header_accept_language">Accept-Language</string>
    <string name="http_header_accept_language_default_value">en-US,en;q=0.9</string>
    <integer name="http_header_name_max_length">128</integer>
...
