/*
 * Copyright (c) 2026 Alwin Ibba
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package net.ibbaa.keepitup.ui.dialog;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.longClick;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isChecked;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isEnabled;
import static androidx.test.espresso.matcher.ViewMatchers.isFocusable;
import static androidx.test.espresso.matcher.ViewMatchers.isNotChecked;
import static androidx.test.espresso.matcher.ViewMatchers.isRoot;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.CoreMatchers.containsString;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.not;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertTrue;

import android.os.Bundle;

import androidx.test.core.app.ActivityScenario;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.MediumTest;

import net.ibbaa.keepitup.R;
import net.ibbaa.keepitup.model.Header;
import net.ibbaa.keepitup.model.HeaderType;
import net.ibbaa.keepitup.test.mock.MockClipboardManager;
import net.ibbaa.keepitup.ui.BaseUITest;
import net.ibbaa.keepitup.ui.GlobalSettingsActivity;
import net.ibbaa.keepitup.util.BundleUtil;
import net.ibbaa.keepitup.util.StringUtil;

import org.junit.Test;
import org.junit.runner.RunWith;

@MediumTest
@RunWith(AndroidJUnit4.class)
public class HeaderEditDialogTest extends BaseUITest {

    private ActivityScenario<?> activityScenario;

    @Test
    public void testEmptyNameAndValue() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        HeaderEditDialog dialog = openHeaderEditDialog(new Header());
        onView(withId(R.id.textview_dialog_header_edit_title)).check(matches(withText("HTTP Header")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("")));
        onView(withId(R.id.checkbox_dialog_header_edit_basic_auth)).check(matches(isNotChecked()));
        Header header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("", header.getName());
        assertEquals("", header.getValue());
        onView(withId(R.id.imageview_dialog_header_edit_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testEmptyNameAndValueScreenRotation() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        HeaderEditDialog dialog = openHeaderEditDialog(new Header());
        onView(withId(R.id.textview_dialog_header_edit_title)).check(matches(withText("HTTP Header")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("")));
        onView(withId(R.id.checkbox_dialog_header_edit_basic_auth)).check(matches(isNotChecked()));
        Header header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("", header.getName());
        assertEquals("", header.getValue());
        rotateScreen(activityScenario);
        dialog = getDialog();
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("")));
        onView(withId(R.id.checkbox_dialog_header_edit_basic_auth)).check(matches(isNotChecked()));
        header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("", header.getName());
        assertEquals("", header.getValue());
        rotateScreen(activityScenario);
        dialog = getDialog();
        onView(withId(R.id.textview_dialog_header_edit_title)).check(matches(withText("HTTP Header")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("")));
        onView(withId(R.id.checkbox_dialog_header_edit_basic_auth)).check(matches(isNotChecked()));
        header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("", header.getName());
        assertEquals("", header.getValue());
        onView(withId(R.id.imageview_dialog_header_edit_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testEditNameAndValue() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        HeaderEditDialog dialog = openHeaderEditDialog(new Header());
        onView(withId(R.id.textview_dialog_header_edit_title)).check(matches(withText("HTTP Header")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).perform(replaceText("name"));
        onView(withId(R.id.edittext_dialog_header_edit_value)).perform(replaceText("value"));
        Header header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("name", header.getName());
        assertEquals("value", header.getValue());
        onView(withId(R.id.imageview_dialog_header_edit_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testEditNameAndValueScreenRotation() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        HeaderEditDialog dialog = openHeaderEditDialog(new Header(5));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).perform(replaceText("name"));
        onView(withId(R.id.edittext_dialog_header_edit_value)).perform(replaceText("value"));
        Header header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(5, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("name", header.getName());
        assertEquals("value", header.getValue());
        rotateScreen(activityScenario);
        dialog = getDialog();
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("name")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("value")));
        header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(5, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("name", header.getName());
        assertEquals("value", header.getValue());
        rotateScreen(activityScenario);
        dialog = getDialog();
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("name")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("value")));
        header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(5, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("name", header.getName());
        assertEquals("value", header.getValue());
        onView(withId(R.id.imageview_dialog_header_edit_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testNetworkTaskIdSet() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        HeaderEditDialog dialog = openHeaderEditDialog(new Header(5));
        onView(withId(R.id.textview_dialog_header_edit_title)).check(matches(withText("HTTP Header")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).perform(replaceText("name"));
        onView(withId(R.id.edittext_dialog_header_edit_value)).perform(replaceText("value"));
        Header header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(5, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("name", header.getName());
        assertEquals("value", header.getValue());
        onView(withId(R.id.imageview_dialog_header_edit_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testNetworkTaskIdSetScreenRotation() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        openHeaderEditDialog(new Header(5));
        rotateScreen(activityScenario);
        onView(withId(R.id.textview_dialog_header_edit_title)).check(matches(withText("HTTP Header")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).perform(replaceText("name"));
        onView(withId(R.id.edittext_dialog_header_edit_value)).perform(replaceText("value"));
        rotateScreen(activityScenario);
        HeaderEditDialog dialog = getDialog();
        Header header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(5, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("name", header.getName());
        assertEquals("value", header.getValue());
        onView(withId(R.id.imageview_dialog_header_edit_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testNameAndValueSet() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        HeaderEditDialog dialog = openHeaderEditDialog(getHeader(1));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("Name1")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("Value1")));
        Header header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("Name1", header.getName());
        assertEquals("Value1", header.getValue());
        onView(withId(R.id.imageview_dialog_header_edit_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testNameAndValueSetScreenRotation() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        HeaderEditDialog dialog = openHeaderEditDialog(getHeader(1));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("Name1")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("Value1")));
        Header header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("Name1", header.getName());
        assertEquals("Value1", header.getValue());
        rotateScreen(activityScenario);
        dialog = getDialog();
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("Name1")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("Value1")));
        header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("Name1", header.getName());
        assertEquals("Value1", header.getValue());
        rotateScreen(activityScenario);
        dialog = getDialog();
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("Name1")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("Value1")));
        header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("Name1", header.getName());
        assertEquals("Value1", header.getValue());
        onView(withId(R.id.imageview_dialog_header_edit_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testEditNameAndValueSet() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        HeaderEditDialog dialog = openHeaderEditDialog(getHeader(1));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("Name1")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("Value1")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).perform(replaceText("Name2"));
        onView(withId(R.id.edittext_dialog_header_edit_value)).perform(replaceText("Name2"));
        Header header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("Name2", header.getName());
        assertEquals("Name2", header.getValue());
        onView(withId(R.id.imageview_dialog_header_edit_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testEditNameAndValueSetScreenRotation() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        HeaderEditDialog dialog = openHeaderEditDialog(getHeader(1));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("Name1")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("Value1")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).perform(replaceText("Name2"));
        onView(withId(R.id.edittext_dialog_header_edit_value)).perform(replaceText("Value2"));
        Header header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("Name2", header.getName());
        assertEquals("Value2", header.getValue());
        rotateScreen(activityScenario);
        dialog = getDialog();
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("Name2")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("Value2")));
        header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("Name2", header.getName());
        assertEquals("Value2", header.getValue());
        dialog = getDialog();
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("Name2")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("Value2")));
        header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("Name2", header.getName());
        assertEquals("Value2", header.getValue());
        onView(withId(R.id.imageview_dialog_header_edit_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testBasicAuthHeaderCancel() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        HeaderEditDialog dialog = openHeaderEditDialog(new Header());
        onView(withId(R.id.textview_dialog_header_edit_title)).check(matches(withText("HTTP Header")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("")));
        onView(withId(R.id.checkbox_dialog_header_edit_basic_auth)).check(matches(isNotChecked()));
        onView(withId(R.id.checkbox_dialog_header_edit_basic_auth)).perform(click());
        onView(withId(R.id.edittext_dialog_basic_auth_username)).perform(replaceText("abc"));
        onView(withId(R.id.edittext_dialog_basic_auth_password)).perform(replaceText("123"));
        onView(withId(R.id.imageview_dialog_basic_auth_cancel)).perform(click());
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(isEnabled()));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(isEnabled()));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withPasswordVisibility(false)));
        onView(withId(R.id.checkbox_dialog_header_edit_basic_auth)).check(matches(isNotChecked()));
        Header header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("", header.getName());
        assertEquals("", header.getValue());
        onView(withId(R.id.imageview_dialog_header_edit_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testBasicAuthHeaderCancelScreenRotation() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        openHeaderEditDialog(new Header());
        onView(withId(R.id.textview_dialog_header_edit_title)).check(matches(withText("HTTP Header")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("")));
        onView(withId(R.id.checkbox_dialog_header_edit_basic_auth)).check(matches(isNotChecked()));
        onView(withId(R.id.checkbox_dialog_header_edit_basic_auth)).perform(click());
        rotateScreen(activityScenario);
        onView(withId(R.id.edittext_dialog_basic_auth_username)).perform(replaceText("abc"));
        onView(withId(R.id.edittext_dialog_basic_auth_password)).perform(replaceText("123"));
        onView(withId(R.id.imageview_dialog_basic_auth_cancel)).perform(click());
        rotateScreen(activityScenario);
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(isEnabled()));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(isEnabled()));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withPasswordVisibility(false)));
        onView(withId(R.id.checkbox_dialog_header_edit_basic_auth)).check(matches(isNotChecked()));
        HeaderEditDialog dialog = getDialog();
        Header header = dialog.getHeader();
        assertEquals(-1, header.getId());
        assertEquals(-1, header.getNetworkTaskId());
        assertEquals(HeaderType.GENERIC, header.getHeaderType());
        assertTrue(header.isValueValid());
        assertEquals("", header.getName());
        assertEquals("", header.getValue());
        onView(withId(R.id.imageview_dialog_header_edit_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testBasicAuthHeaderOk() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        HeaderEditDialog dialog = openHeaderEditDialog(new Header());
        onView(withId(R.id.textview_dialog_header_edit_title)).check(matches(withText("HTTP Header")));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(withText("")));
        onView(withId(R.id.checkbox_dialog_header_edit_basic_auth)).check(matches(isNotChecked()));
        onView(withId(R.id.checkbox_dialog_header_edit_basic_auth)).perform(click());
        onView(withId(R.id.edittext_dialog_basic_auth_username)).perform(replaceText("abc"));
        onView(withId(R.id.edittext_dialog_basic_auth_password)).perform(replaceText("123"));
        onView(withId(R.id.imageview_dialog_basic_auth_ok)).perform(click());
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(not(isFocusable())));
        onView(withId(R.id.edittext_dialog_header_edit_value)).check(matches(not(isFocusable())));
        onView(withId(R.id.edittext_dialog_header_edit_name)).check(matches(withText("Authorization")));
